# robot_description

./: README.md  pyproject.toml  setup.cfg
go2/: go2.urdf
src/g1_description/g1/: g1_23dof.urdf
src/go2_description/go2/: go2_with_foot_frames.urdf
src/robot_description/go2_description/: go2_pinocchio.py
src/robot_description/go2_description/go2/: go2_EEs.urdf
