[build-system]
requires = ["setuptools>42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_description"
version = "0.1.0"
description = "Robot description files for g1 and go2 robot models."
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
