[metadata]
name = robot-description
version = 0.1.0
description = Robot description package with URDF files
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >=3.8

[options]
packages = find:
package_dir =
    = src

[options.package_data]
robot_description = go2_description/go2/*.urdf